# prints

./: .gitignore  README.md  make  pyproject.toml  pyrightconfig.json
components/: common.py  hexagon.py
helpers/: ivar.py  transform.py
things/box-lidless-stackable/: README.md  main.py
things/box-power-socket/: PowerSocket.FCStd  README.md
things/box-round-threaded/: README.md  main.py
things/box-sieve-threaded/: README.md  main.py
things/box-simple-slotted/: README.md  main.py
things/box-vase-slotted/: README.md
things/box-woven-plain/: README.md  main.py
things/holder-bike-light/: README.md
things/holder-face-mask/: FaceMaskHolder.FCStd
things/holder-heat-sensor/: Accumulator-12.FCStd  Accumulator-13.FCStd  Boiler-M10.FCStd  Boiler-M12.FCStd  README.md  Universal.FCStd
things/holder-soundmaster-radio/: README.md
things/hook-bathroom-ladder/: main.py
things/hook-flower-wire/: README.md  WireHook.FCStd
things/hook-pool-hose/: main.py
things/ivar-filament-hook/: README.md  main.py
things/ivar-holder-cable/: README.md  main.py
things/ivar-holder-pictures/: README.md  main.py
things/ivar-holder-power-plug/: README.md  main.py
things/ivar-holder-sheets/: main.py
things/ivar-holder-spools/: README.md  main.py
things/ivar-holder-tassimo/: README.md  main.py
things/ivar-light-fixtures-one/: README.md  main.py
things/ivar-light-fixtures-two/: main.py
things/osprey-hose-clip/: OspreyClip.FCStd  README.md
things/repair-boffin-engine/: BoffinEngine.FCStd  README.md
things/repair-box-hinges/: main.py
(+118 files in other folders)
