[tool.poetry]
name = 'solid-printer-model'
version = '0'
description = ''
authors = ['Petr Tuma <ceres@tmatmouci.cz>']

[tool.poetry.dependencies]
python = '^3.11'
solidpython = "^1.1.3"
solidpython2 = "^2.1.0"
numpy = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ['poetry >= 1.0']
build-backend = 'poetry.masonry.api'
